fix: spacing in the section register now

--- a/css/styles.css
+++ b/css/styles.css
@@ -502,7 +502,7 @@ button {
 }
 
 .register-now__header {
-	row-gap: 36px;
+	row-gap: 30px;
 }
 
 .register-now__description {
